2009-12-09  Christos Zoulas <christos@zoulas.com>

	* Fix use-after-free and double free of mntfs private data
	  ops_nfs.c(nfs_init) does not clear private data pointer after free().
	  This leads to use-after-free and double free in case mount() fails.
	  (found by valgrind)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-11-23  Christos Zoulas <christos@zoulas.com>

	* The temporary filename buffer was leaked in lock_mtab().
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-10-27  Christos Zoulas <christos@zoulas.com>

	* Deal with errno.h->sys/errno.h better

2009-10-26  Christos Zoulas <christos@zoulas.com>

	* Fix issue with autoconf 2.63

	* Fix compile warnings for gcc-4.4.x

2009-04-15  Christos Zoulas <christos@zoulas.com>

	* Share the LDAP connection between different maps to save resources
	  on the LDAP server. (Olaf Flebbe <o.flebbe@science-computing.de>)

2009-03-20  Christos Zoulas <christos@zoulas.com>

	* Fix largefile re-definitions

	* Fix compilation error caused in previous patch

2009-02-19  Christos Zoulas <christos@zoulas.com>

	* Add a synchronous unmount amq rpc that will wait for the remote
	  filesystem to be unmounted, or return an error. Enabled by amq -uu

2009-01-11  Erez Zadok  <ezk@fsl.cs.sunysb.edu>

	* amd/ops_udf.c: don't define functions/variables which may not be
	used.

	* amd/ops_tmpfs.c (mount_tmpfs): force gcc not to complain about
	unused variables.

	* config.guess.long: properly support Fedora Core.

2009-01-09  Christos Zoulas <christos@zoulas.com>

	* Fix nfs mounts on linux 2.6.26 by explicitly initializing context.

	* Treat an empty sublink as an unset sublink; this allows us to
	  say sublink:=; in a spec to override the default. (This produces
	  Bad selector error, but it works. XXX: We need to decide how to
	  unset a selector. I proposed an unset keyword a while ago).

2009-01-06  Christos Zoulas <christos@zoulas.com>
